
***   Add --getenv option for simplifying Makefiles.

***   Add --x-initial option for specifying initial value assignment behavior.

***   Add --no-relative-cfuncs and related default optimization, bug1224. [John Coiner]

***   Add /*verilator tag*/ for XML extraction applications. [Chris Randall]

****  The internal test_verilated test directory is moved to be part of test_regress.

****  Fix over-aggressive inlining, bug1223. [John Coiner]

****  Fix Ubuntu 17.10 issues, bug1223 partial. [John Coiner]

****  Fix compiler warning when WIDTH warning ignored on large compare.

****  Fix memory leak in VerilatedVcd dumps, bug1222 partial. [Shareef Jalloq]

****  Fix unnecessary Vdly variables, bug1224 partial. [John Coiner]

****  Fix conditional slices and add related optimizations.

****  Fix `` expansion of empty `defines, bug1225. [Odd Magne Reitan]


* Verilator 3.912 2017-09-23

**    Verilated headers no longer "use namespace std;"
      User's code without "std::" prefixes may need "use namespace std;" to compile.

***   Support or/and/xor array intrinsic methods, bug1210. [Mike Popoloski]

***   Support package export, bug1217. [Usuario Eda]

***   Fix ordering of arrayed cell wide connections, bug1202 partial. [Mike Popoloski]

****  Support module port parameters without defaults, bug 1213. [Mike Popoloski]

****  Add performance information to --stats file.

****  Simplify VL_CONST_W macro generation for faster compiles.

****  Fix LITENDIAN warning on arrayed cells, bug1202. [Mike Popoloski]

****  Fix enum ranges without colons, bug1204. [Mike Popoloski]

****  Fix GCC noreturn compile error, bug1209. [Mike Popoloski]

****  Fix constant function default parameters, bug1211. [Mike Popoloski]

****  Fix non-colon array of interface modports, bug1212. [Mike Popoloski]

****  Fix .name connections on interfaces, bug1214. [Mike Popoloski]

****  Fix wide array indices causing compile error.

****  Better optimize Shift-And, and replication constructs.

