@@ -35,6 +35,15 @@ CPPFLAGS += $(CPPFLAGS_DRIVER)
 CPPFLAGS += $(CPPFLAGS_DRIVER2)
 CPPFLAGS += $(CPPFLAGS_ADD)
 
+ifeq ($(CFG_WITH_LONGTESTS),yes)
+  ifeq ($(DRIVER_STD),newest)
+    CPPFLAGS += $(CFG_CXXFLAGS_STD_NEWEST)
+  endif
+  ifeq ($(DRIVER_STD),oldest)
+    CPPFLAGS += $(CFG_CXXFLAGS_STD_OLDEST)
+  endif
+endif
+
 #######################################################################
 # Linking final exe
 
