@@ -17,6 +17,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  The internal test_verilated test directory is moved to be part of test_regress.
 
+****  The experimental VL_THREADED setting (only, not normal mode) now requires C++11.
+
 ****  Fix over-aggressive inlining, bug1223. [John Coiner]
 
 ****  Fix Ubuntu 17.10 issues, bug1223 partial. [John Coiner]
